--- a/index.html
+++ b/index.html
@@ -4,15 +4,6 @@
 <title>jinghan's homepage</title>
 <meta name="homepage" content="jinghan's homepage" />
 <link href="templatemo_style.css" rel="stylesheet" type="text/css" />
-<script type='text/javascript' src='js/jquery.min.js'></script>
-<script type='text/javascript' src='js/jquery.scrollTo-min.js'></script>
-<script type='text/javascript' src='js/jquery.localscroll-min.js'></script>
-<script type="text/javascript">
-$(document).ready(function () {
-$.localScroll();
-});
-</script> 
-
 
 </head>
 <body>
@@ -39,7 +30,7 @@ $.localScroll();
         	<div class="content_title content_ctf">
         	  <h2>我的家乡</h2></div>
             <div class="content">
-            	<div class="image_wrapper image_fl"><img src="images/templatemo_image_01.jpg" alt="Image" /></a><span></span></div>
+            	<div class="image_wrapper image_fl"><img src="images/templatemo_image_01.jpg" alt="Image" /></div>
                 <p>华山西峰:是华山秀丽险峻的山峰。峰顶翠云宫前有巨石状如莲花，故又名莲花峰。西北绝崖千丈，似刀削锯截，其陡峭巍峨、阳刚挺拔之势是华山山形之代表，因此古人常把华山叫莲花三圣母山。西峰上景观比比皆是，有翠云宫、莲花洞、斧劈石、舍身崖等，并伴有许多美丽的神话传说。峰上崖壁题刻遍布，工草隶篆，琳琅满目。塔下岩石上有"枕破鸿蒙"题刻，是书法家王铎手迹。</br>华山北峰:云台峰，是华山主峰之一，海拔1614米。此峰四面悬绝，上冠景云，下通地脉，巍然独秀，有若云台，因此得名峰上景观颇多，有影响的如真武殿、焦公石室、长春石室、玉女窗、仙油贡、神土崖、倚云亭、老君挂犁处、铁牛台、白云仙境石牌坊等，且各景点均伴有美丽的神话传说。
 
 
