--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
 <title>jinghan's homepage</title>
 <meta name="homepage" content="jinghan's homepage" />
 <link href="templatemo_style.css" rel="stylesheet" type="text/css" />
-
+<script type='text/javascript' src='js/jquery.min.js'></script>
+<script type='text/javascript' src='js/jquery.scrollTo-min.js'></script>
+<script type='text/javascript' src='js/jquery.localscroll-min.js'></script>
+<script type="text/javascript">
+$(document).ready(function () {
+$.localScroll();
+});
+</script> 
 </head>
 <body>
 
